# wsb-tracker

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.dev  LICENSE  Makefile  README.md  docker-compose.yml  docker-entrypoint-dev.sh  main.py  pyproject.toml  requirements.txt
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: AlertBanner.tsx  ConfirmDialog.tsx  CooccurrenceList.tsx  CorrelationAnalysis.tsx  CorrelationHeatmap.tsx  Dashboard.tsx  DatabaseExplorer.tsx  Pagination.tsx  ScanSettings.tsx  ScanStatus.tsx  StatsCard.tsx  TickerChart.tsx  TickerDetail.tsx  TickerTable.tsx  TradingIdeas.tsx
frontend/src/hooks/: useCorrelation.ts  useMentions.ts  usePrices.ts  useSettings.ts  useTickers.ts  useTradingIdeas.ts  useWebSocket.ts
frontend/src/types/: index.ts
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_database.py  test_models.py  test_reddit_client.py  test_sentiment.py  test_ticker_extractor.py  test_tracker.py
wsb_tracker/: __init__.py  cli.py  config.py  database.py  llm_analyzer.py  llm_models.py  models.py  openfigi.py  price_service.py  reddit_client.py  runtime_settings.py  sentiment.py  ticker_database.py  ticker_extractor.py  ticker_info.py  tracker.py
wsb_tracker/api/: __init__.py  main.py  schemas.py  websocket.py
wsb_tracker/api/routes/: alerts.py  correlation.py  mentions.py  prices.py  scans.py  settings.py  stats.py  tickers.py  trading_ideas.py
